src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  margin: 0;
  width: 100vw;
  height: 100vh;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.App{
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.header{
  height: 100%;
  position: sticky;
  display: grid;
  top: 0px;
  padding: 10px 0px;
  font-size: 150%;
  color: white;
  font-weight: bold;
  text-align: center;
  grid-template-columns: 33.3vw 33.3vw 33.3vw;

  background: black;

    box-shadow: 5px 5px transparent,
    2px 2px transparent, 
    2px 2px transparent, 
    2px 2px transparent, 
    2px 2px transparent,
    2px 2px 2px transparent;
}


.header-section{
  width: 100%;
}

.sign-in-button{
  width: 25%;
}

.signInSection{
  width: 100%;
  height: 10vh;
}

.container{
  width: 100vw;
  height: 100vh;
 
}
 

.homePage{
  margin-top: 7%;
  
}


/***************** rental chart *****************/
.chart-div{
  width: 100vw;
  align-items: center;
}

.recharts-wrapper{
  width: inherit !important;
}

.rental-info{
  overflow: auto;
  text-align: center;
  display: grid;
  top: 15%;
  height: 80%;
  width: 100%;
  
  grid-template-columns: 30vw 30vw 30vw;
  justify-content: space-evenly;
  align-items: center;
}

.rental-info-section{
  text-overflow: ellipsis;
  width: 100%;
  overflow-wrap: normal;
  overflow: auto;
}

/****************** asset **********************/
.ticker-space{
  text-align: center;
  height: 100%;
  
}

.asset-component{
  height: 27vh;
}

.asset-space{
  display: grid;
  margin-left: 5%;
  margin-right: 5%;
  grid-template-columns: auto auto auto;
}


/****************** rent **********************/
.rent-page{
  height: 90vh;
  width: 100vw;
  overflow: scroll;
}

.rent-container{
  display: grid;
  grid-template-columns: 100%;
  height: 100%;
}

.rent-container-open{
  display: grid;
  grid-template-columns: 20% 80%;
  height: 100%;  
}

.card-space{
  display: grid;
  grid-template-columns: 60% 40%;
}

.card-container{
  height: 50vh;
  width : 50vh;
  display: inline-block;
  background: black;
}

.sidecar-left{
  background: black;
  opacity: 50%;
}

